Fix Gallery component overflow

--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -26,6 +26,7 @@
   background-color: #242a43;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
+  overflow: hidden;
   position: relative;
   transition: 1s ease-in-out;
 
